--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thắm AI Assistant</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Thắm AI Assistant</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <!-- Chatbox -->
-        <div id="chatbox"></div>
+  <div class="container">
+    <!-- Chatbox -->
+    <div id="chatbox"></div>
 
-        <!-- Input area -->
-        <div class="input-area">
-            <input type="text" id="userInput" placeholder="Nhập tin nhắn...">
-            <button id="sendBtn">➤</button>
-            <button id="micBtn">🎤</button>
-        </div>
+    <!-- Input + control -->
+    <div class="controls">
+      <select id="voiceSelect"></select>
+      <div class="input-area">
+        <input type="text" id="userInput" placeholder="Nhập tin nhắn...">
+        <button id="sendBtn">➤</button>
+        <button id="micBtn">🎤</button>
+      </div>
+      <button id="darkModeBtn">🌙 Dark Mode</button>
     </div>
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
