--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <div class="container">
     <!-- Chatbox -->
     <div id="chatbox"></div>
+<!-- Debug log panel -->
+<div id="debugPanel"></div>
 
     <!-- Input + control -->
     <div class="controls">
       <select id="voiceSelect"></select>
-      <div class="input-area">
+      <div class="input-area"><button id="debugBtn">🐞</button><div>
         <input type="text" id="userInput" placeholder="Nhập tin nhắn...">
         <button id="sendBtn">➤</button>
         <button id="micBtn">🎤</button>
