--- a/index.html
+++ b/index.html
@@ -1,28 +1,46 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thắm AI Assistant</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Thắm AI — Trợ lý cục bộ</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <!-- Chatbox -->
-    <div id="chatbox"></div>
-<!-- Debug log panel -->
-<div id="debugPanel"></div>
-
-    <!-- Input + control -->
-    <div class="controls">
-      <select id="voiceSelect"></select>
-      <div class="input-area"><button id="debugBtn">🐞</button><div>
-        <input type="text" id="userInput" placeholder="Nhập tin nhắn...">
-        <button id="sendBtn">➤</button>
-        <button id="micBtn">🎤</button>
+    <header class="header">
+      <div class="title">Thắm AI</div>
+      <div class="header-actions">
+        <button id="darkModeBtn" title="Chuyển Dark/Light">🌙</button>
+        <button id="muteBtn" title="Tắt/ bật âm">🔈</button>
       </div>
-      <button id="darkModeBtn">🌙 Dark Mode</button>
-    </div>
+    </header>
+
+    <main id="chatbox" aria-live="polite"></main>
+
+    <!-- Debug panel (ẩn theo mặc định) -->
+    <div id="debugPanel" class="debug-panel" aria-hidden="true"></div>
+
+    <section class="controls">
+      <div class="top-controls">
+        <select id="voiceSelect" title="Chọn giọng"></select>
+        <button id="debugBtn" title="Bật/tắt Debug">🐞 Debug</button>
+      </div>
+
+      <div class="input-row">
+        <input id="userInput" placeholder="Nhập tin nhắn hoặc bấm 🎤 để nói..." autocomplete="off"/>
+        <button id="sendBtn" title="Gửi (Enter)">➤</button>
+        <button id="micBtn" title="Mic">🎤</button>
+      </div>
+
+      <div class="bottom-controls">
+        <button id="clearBtn">🗑️ Clear</button>
+        <button id="saveBtn">💾 Save</button>
+        <button id="loadBtn">📂 Load</button>
+        <button id="downloadBtn">⬇️ Download</button>
+      </div>
+    </section>
   </div>
 
   <script src="script.js"></script>
